--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,5 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
 
 .theme-dark {
   --primary: hsl(0, 0%, 100%);
@@ -11,4 +11,4 @@
   --secondary: hsl(0, 0%, 100%);
 }
 
-@import 'tailwindcss/utilities';
+@import "tailwindcss/utilities";
